Revision history for Exobrain

{{$NEXT}}

    * META: Updated meta-info for distribution.
    * HRPG: Fixed handling of XP for Sending mail, and XP in general.

1.00      2014-02-26 02:44:28EST-0500 America/Montreal

    * BUILD: Re-ordered dist.ini for better release process.
    * API: Implemented class-based agents.
    * API: Split Twitter into its own Exobrain plug-in distro
    * RUN: Updated 'exobrain' CLI to be more awesome.
    * INTERNAL: Converted many type-specific agents to generalised types.
    * GENERAL: Made everything seriously more awesome.

0.06      2014-02-11 04:46:19EST+1100 Australia/Melbourne

    * BUILD: Reduced dependencies
    * BUILD: We now use ZMQ.pm, supporting both ZMQ2 and ZMQ3
    * TEST: Tests now run without an ~/.exobrainrc file
    * TEST: Added travis-ci support (thanks to @mmcclimon)
    * BUGFIX: Compatibility with Perl 5.12
    * BUGFIX: Removed given/when in Exobrain::Bus.
              This was making older and newer perls unhappy. :P

0.05    Early Feb 2014

    * Initial release to the CPAN.